Fix: Unexpected horizontal scroll

--- a/assets/css/grid.css
+++ b/assets/css/grid.css
@@ -8,6 +8,7 @@
 .row {
     display: flex;
     width: 100%;
+    box-sizing: border-box;
 }
 
 .flex-column {
@@ -30,7 +31,7 @@ body {
 }
 
 header {
-    margin: 4px 16px;
+    padding: 4px 16px;
     height: 50px;
     line-height: 50px;
     font-size: 24px;
